--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Bot Framework
-aiogram==3.4.1
+aiogram>=3.24.0
 
 # Database
 sqlalchemy==2.0.25
@@ -7,6 +7,7 @@ aiosqlite==0.19.0
 
 # Background Tasks
 APScheduler==3.10.4
+tzdata>=2024.1  # Timezone database for APScheduler
 
 # Configuration
 python-dotenv==1.0.0
