--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,8 @@ addopts =
     -v
     --tb=short
     --strict-markers
+    # Force test environment to prevent database contamination
+    -p no:cacheprovider
     # Coverage options (commented out by default, enable with: pytest --cov)
     # --cov=bot
     # --cov=config
@@ -19,3 +21,4 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
+    e2e: marks tests as end-to-end tests
